Project-level WorkOS environments (#45098)
WorkOS AuthKit environments that belong to a project rather than a single deployment.

GitOrigin-RevId: 9df4d65e97d3142456a641a46e28210ab11d9345
